# Meteo-Chat

./: .gitattributes  .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
agent/: __init__.py  agent_client.py  dataset_builder.py  infer_writer.py  llm_service.py
agent/notebooks/: train_llm.py
agent/prompts/: system_prompt.txt  user_examples.txt
agent/schema/: response_schema.json  training_schema.json
agent/tests/: sanity.py
apps/streamlit_app/: README.md  app.py  requirements.txt
artifacts/: config.json
artifacts/adapter/: adapter_config.json  adapter_model.safetensors
config/: logging.conf  providers.yaml  settings.yaml
docs/: API_ROUTES.md  ARCHITECTURE.md  DEPLOYMENT.md  LLM_TRAINING.md
mcp_server/: main.py  package-lock.json  package.json  tsconfig.json
mcp_server/src/: aggregator.ts  capabilities.ts  executor.ts  location.ts  planner.ts  server.ts  utils.ts
meteo_chat/: cli.py  mcp_client.py
tools/data_generation/: generate_samples.py  make_dataset_full.py
tools/visualization/: plot_utils.py  verify_outputs.py
