[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteo-chat"
version = "0.1.0"
description = "Meteo-Chat: dataset-bounded weather summaries with a polished Streamlit UI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Arka Mitra" }]
requires-python = ">=3.9"

dependencies = [
  # Core app
  "streamlit>=1.34",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "requests>=2.31",

  # LLM + server stack (so the local model actually runs)
  "torch>=2.3",
  "transformers>=4.41",
  "peft>=0.11",
  "accelerate>=0.33",
  "safetensors>=0.4",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
]

[project.urls]
Homepage = "https://github.com/mitraarka27/Meteo-Chat"
Issues   = "https://github.com/mitraarka27/Meteo-Chat/issues"

[project.scripts]
meteo-chat      = "meteo_chat.cli:main"
meteo-chat-app  = "meteo_chat.cli:run_app"
meteo-chat-mcp  = "meteo_chat.cli:run_mcp"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["meteo_chat*", "mcp_server*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
meteo_chat = ["static/**", "assets/**"]